fix: update user profile update validation and handle gender assignment